<resources>
    <string name="app_name">ToTrivel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主頁</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">行程安排</string>
    <string name="trivelPlace">請選擇旅遊地點</string>
    <string name="checkBtn">確認</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lab">Fab</string>
    <string name="sp">sp</string>
    <string name="placeCheckText">請選擇景點</string>
    <string name="placeCheckBox1">景點1</string>
    <string name="placeCheckBox2">景點2</string>
    <string name="placeCheckBox3">景點3</string>
    <string name="placeCheckBox4">景點4</string>
    <string name="placeCheckBox5">景點5</string>
    <string name="placeCheckBox6">景點6</string>
    <string name="placeCheckBtn">確定</string>
    <string name="menu_firstday">行程</string>
    <string name="timeText">時間</string>
    <string name="planPlace1">景點1</string>
    <string name="planPlace2">景點2</string>
    <string name="planPlace3">景點3</string>
    <string name="planPlace4">景點4</string>
    <string name="timeText1">09:00-11:30</string>
    <string name="timeText2">12:30-17:30</string>
    <string name="timeText3">18:30-21:00</string>
    <string name="timeText4">午餐</string>
    <string name="timeText5">晚餐</string>
    <string name="planText">景點</string>
    <string name="routePlanTitleText">請依序選擇想要遊玩的景點</string>
    <string name="mapPlace1">景點1</string>
    <string name="mapPlace2">景點2</string>
    <string name="mapPlace3">景點3</string>
    <string name="mapPlace4">景點4</string>
    <string name="planSp1">sp</string>
    <string name="planSp2">sp</string>
    <string name="planSp3">sp</string>
    <string name="planSp4">4</string>
</resources>