<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F9D9"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E5FEFF"
        android:text="@string/placeCheckText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="391dp"
        android:layout_height="367dp"
        app:layout_constraintBottom_toBottomOf="@id/placeCheckBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/placeCheckBox0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEF7BF"
                android:text="@string/placeCheckBox1" />

            <CheckBox
                android:id="@+id/placeCheckBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEF7BF"
                android:text="@string/placeCheckBox2" />

            <CheckBox
                android:id="@+id/placeCheckBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEF7BF"
                android:text="@string/placeCheckBox3" />

            <CheckBox
                android:id="@+id/placeCheckBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEF7BF"
                android:text="@string/placeCheckBox4" />

            <CheckBox
                android:id="@+id/placeCheckBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEF7BF"
                android:text="@string/placeCheckBox5" />

            <CheckBox
                android:id="@+id/placeCheckBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEF7BF"
                android:text="@string/placeCheckBox6" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/placeCheckBtn"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00980A"
        android:text="@string/placeCheckBtn"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gallery" />

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>