<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.totrivel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        app:defaultNavHost="true"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.totrivel.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <argument
            android:name="choicePlace"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.totrivel.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_firstday"
            app:destination="@id/nav_firstday"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="choicePlace"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_firstday"
        android:name="com.example.totrivel.ui.firstday.FirstDayFragment"
        android:label="@string/menu_firstday"
        tools:layout="@layout/fragment_first_day" >
        <argument
            android:name="choicePlace"
            app:argType="integer" />
        <argument
            android:name="choiceAttractions"
            app:argType="string[]" />
        <argument
            android:name="order"
            app:argType="integer[]" />
    </fragment>
</navigation>